--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header{
 }
 
 .imgLogo img{
-    height: 80px;
+    height: 5rem;
 }
 
 nav ul{
@@ -154,9 +154,9 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 footer{
     display: flex;
-    height: 300px;
     background-color: black;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 
 }
 
@@ -183,7 +183,7 @@ footer section div img{
     width: 100%;
     height: 1500px;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 180px 400px 400px 400px;
+    grid-template-rows: 11.875rem 400px 400px 400px;
     row-gap: 30px;
     column-gap: 30px;
     background-color: black;
@@ -191,7 +191,7 @@ footer section div img{
 
 .grids section div img{
     width: 100%;
-    height: 300px;
+    height: 18.75rem;
 }
 
 .grids h3{
@@ -210,16 +210,20 @@ footer section div img{
 
     color: antiquewhite;
     margin-left: 50px;
+    margin-top: 10px;
+    height: 1.875rem;
 }
 
-.section1 div form{
+
+
+.section1 form{
     display: flex;
-    margin-left: 30px; 
     justify-content: space-evenly;
+    height: 9.375rem;
     
 }
 
-.section1 div form input{
+.section1 form input{
     padding: 10px;
     margin: 50px;
     border: 3px solid antiquewhite;
@@ -228,7 +232,7 @@ footer section div img{
     color: rgb(97, 95, 93);
 }
 
-.section1 div form button{
+.section1 form button{
     padding: 10px;
     margin: 50px;
     border: 3px solid rgb(0, 0, 0);
@@ -239,7 +243,7 @@ footer section div img{
 }
 
 
-.section1 div form select{
+.section1 form select{
     padding: 10px;
     margin: 50px;
     border: 3px solid antiquewhite;
@@ -293,6 +297,8 @@ footer section div img{
     color: antiquewhite;
 }
 
+/* Pag Emprendimientos */
+
 .empHeader{
     background-image: url(../assets/img/emp-header.jpg);
     background-size: cover;
@@ -310,17 +316,17 @@ footer section div img{
 
 }
 .emp{
-    height: 600px;
     color: antiquewhite;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 3.125rem;
 }
 
 .emp div img{
     width: 80%;
-    height: 400px;
-    border-radius: 40px;
+    height: 25rem;
+    border-radius: 2.5rem;
 }
 
 .emp div{
@@ -354,14 +360,14 @@ footer section div img{
     display: flex;
     justify-content: space-evenly;
     justify-content: center;
-    height: 800px;
     background-color: black;
     align-items: center;
+    padding: 6.25rem;
 }
 
 .nos{
     width: 50%;
-    height: 800px;
+
     color: antiquewhite;
     
     display: flex;
@@ -375,8 +381,7 @@ footer section div img{
 .nos1 div{
     border-top: 1px solid rgb(246, 166, 38);
     border-bottom: 1px solid rgb(246, 166, 38) ;
-    margin-left: 100px;
-    margin-right: 100px;
+
     padding: 30px;
     font-family: Arial, Helvetica, sans-serif;
 
@@ -396,7 +401,6 @@ footer section div img{
 }
 
 .mision{
-    height: 200px;
     background-color: rgb(246, 166, 38);
     color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -409,6 +413,7 @@ footer section div img{
 
 .mision div{
     width: 80%;
+    padding: 3.125rem;
 }
 
 .contactosContainer{
@@ -416,6 +421,9 @@ footer section div img{
     height: 800px;
     display: flex;
     justify-content: center;
+    background-image: url("../assets/img/orange-abstract.jpg");
+    color: antiquewhite;
+    text-shadow: rgb(24, 23, 21) 1px 0 10px;
 }
 
 .contactos{
@@ -448,4 +456,136 @@ footer section div img{
 .contactos h1{
     padding: 20px;
     font-size: x-large;
+}
+
+@media (max-width: 1024px){
+    header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Nosotros */
+    .containerNos{
+        display: flex;
+        flex-direction: column;
+    }   
+    .nos{
+        width: 80%;
+    } 
+    .nos1{
+        width: 100%;
+    }
+    .nos2{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        
+    }
+
+}
+
+@media (max-width: 768px){
+    header nav ul{
+        flex-direction: column;
+    }
+
+/* Inmuebles */
+    .grids {
+        display: grid;
+        width: 100%;
+        height: 3000px;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: repeat(7, 25rem);
+    }
+
+    .section1{
+        background-color: rgb(246, 166, 38);
+        font-family: Arial, Helvetica, sans-serif;
+        color: antiquewhite;
+        grid-row: 1/2;
+        grid-column: 1/3; 
+
+    }
+
+    .section1 form{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+/* Emprendimientos */
+
+    .emp{
+        flex-direction: column;
+        padding: 1.875rem;
+        text-align: center;
+        width: 100%;
+    }
+    .emp div{
+        width: 100%;
+    }
+
+
+
+    .invertir{
+        background-color: rgb(246, 166, 38);
+        background-image: none;
+    }    
+    .lista{
+        text-align: center;
+        width: 100%;
+    
+    }
+
+    /* Nosotros */
+    .nos2{
+        flex-direction: column;
+        width: 100%;
+    }
+    .nos2 img{
+        width: 100%;
+        padding: 0;
+        padding-top: 1.25rem;
+    }
+
+
+}   
+
+
+@media (max-width: 426px){
+    .grids {
+        height: 5000px;
+        background-color: black;
+        display: grid;
+        width: 100%;
+        height: 3000px;
+        grid-template-columns: 1fr ;
+        grid-template-rows: repeat(12, 220px);
+
+    }
+    .grids section div img{
+        height: 9.375rem;
+        width: 100%;
+    }
+    .section1{
+        grid-row: 1/4;
+        grid-column: 1/2;
+    }
+
+    /* Emprendimientos */
+
+    .empHeader h1{
+        font-size:x-large;
+    }
+    .emp div img{
+        height: 15rem;
+    }
+
+    /* Nosotros */
+    .nos2 img{
+        height: 12.5rem;
+    }
 }
