--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav ul{
     padding: 10px;
 }
 
-nav a{
+nav  ul a{
     list-style: none;
     color: antiquewhite;
     padding: 20px;
@@ -43,7 +43,7 @@ nav a{
 
 .sectionPrincipal{
 width: 100%;
-height: 670px;
+height: 41.875rem;
 background-image: url("../assets/img/casaInicio2.jpg");
 background-size: cover;
 display: flex;
