--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ align-items: center;
 }
 
 
-.sectionSec {
+/* .sectionSec {
     width: 100%;
     background-color: rgb(0, 0, 0);
     height: 1050px;
@@ -149,7 +149,7 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 .sectionSec button a{
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 
 footer{
@@ -490,6 +490,16 @@ footer section div img{
     header nav ul{
         flex-direction: column;
     }
+    /* Index */
+    .sectionPrincipal{
+        justify-content: space-between;
+        
+    }
+    .sectionPrincipal form{
+        flex-direction: column;
+        height: 50%;
+        
+    }
 
 /* Inmuebles */
     .grids {
@@ -589,3 +599,5 @@ footer section div img{
         height: 12.5rem;
     }
 }
+
+
