Aplicacion de SEO, animaciones, pseudoclases, mixins, variables, maps y creación de partials

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,7 +10,7 @@ footer{
         div{
             display: flex;
             img{
-                height: 50px;
+                height: map-get($tamaños, xl );
                 margin-right: 5px;
             }
         }
