--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
 }
 
 header {
-  display: flex;
   background-color: black;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: none;
 }
 header .imgLogo {
   display: flex;
@@ -16,6 +18,7 @@ header .imgLogo {
 }
 header .imgLogo h2 {
   color: antiquewhite;
+  font-family: Arial, Helvetica, sans-serif;
 }
 header .imgLogo img {
   height: 5rem;
@@ -24,13 +27,22 @@ header nav ul {
   display: flex;
   padding: 10px;
 }
-header nav ul a {
+header nav ul li {
   list-style: none;
+}
+header nav ul li:hover {
+  transform: scale(1.1);
+}
+header nav ul li a {
   color: antiquewhite;
   padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   font-size: 15px;
+  transition: color 2s;
+}
+header nav ul li a:hover {
+  color: rgb(246, 166, 38);
 }
 
 .sectionPrincipal {
@@ -42,10 +54,11 @@ header nav ul a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: none;
 }
 .sectionPrincipal h1 {
   padding: 20px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Lora", serif;
   color: white;
   text-shadow: rgb(0, 0, 0) 1px 0 10px;
 }
@@ -83,26 +96,33 @@ footer section div {
   display: flex;
 }
 footer section div img {
-  height: 50px;
+  height: 3.125rem;
   margin-right: 5px;
 }
 
 .grids {
   display: grid;
-  width: 100%;
-  height: 1500px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 11.875rem 400px 400px 400px;
-  row-gap: 30px;
-  column-gap: 30px;
+  row-gap: 1.875rem;
+  column-gap: 1.875rem;
+  width: 100%;
+  height: 1500px;
   background-color: black;
 }
 .grids img {
   width: 100%;
   height: 18.75rem;
 }
+.grids img:hover {
+  transform: scale(1.04);
+}
 .grids h3 {
   color: rgb(246, 166, 38);
+  transition: text-decoration 3s;
+}
+.grids h3:hover {
+  text-decoration: underline;
 }
 
 .section1 {
@@ -146,47 +166,7 @@ footer section div img {
   border-radius: 0px;
 }
 
-.section2 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section3 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section4 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section5 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section6 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section7 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section8 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section9 {
-  text-align: center;
-  color: antiquewhite;
-}
-
-.section10 {
+.section2, .section10, .section9, .section8, .section7, .section6, .section5, .section4, .section3 {
   text-align: center;
   color: antiquewhite;
 }
@@ -197,8 +177,10 @@ footer section div img {
   height: 300px;
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: none;
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
 }
@@ -210,8 +192,10 @@ footer section div img {
 .emp {
   color: antiquewhite;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  gap: none;
   padding: 3.125rem;
 }
 .emp div {
@@ -221,6 +205,9 @@ footer section div img {
   width: 80%;
   height: 25rem;
   border-radius: 2.5rem;
+}
+.emp div img:hover {
+  transform: scale(1.05);
 }
 .emp div h2 {
   color: rgb(246, 166, 38);
@@ -239,10 +226,36 @@ footer section div img {
   height: 500px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: none;
 }
 
+.slide-top {
+  -webkit-animation: slide-top 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both;
+  animation: slide-top 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both;
+}
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+}
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+}
 .containerNos {
   display: flex;
   justify-content: space-evenly;
@@ -257,8 +270,9 @@ footer section div img {
   color: antiquewhite;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: none;
 }
 
 .nos1 div {
@@ -285,8 +299,9 @@ footer section div img {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: none;
 }
 .mision div {
   width: 80%;
@@ -309,9 +324,10 @@ footer section div img {
   padding: 100px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   justify-content: space-evenly;
+  align-items: center;
+  gap: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .contactos form {
   width: 100%;
@@ -355,43 +371,6 @@ footer section div img {
     flex-direction: row;
   }
 }
-@media (max-width: 426px) {
-  .grids {
-    height: 5000px;
-    background-color: black;
-    display: grid;
-    width: 100%;
-    height: 3000px;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 220px);
-  }
-  .grids section div img {
-    height: 9.375rem;
-    width: 100%;
-  }
-  .section1 {
-    grid-row: 1/4;
-    grid-column: 1/2;
-  }
-  /* Emprendimientos */
-  .empHeader h1 {
-    font-size: x-large;
-  }
-  .emp div img {
-    height: 15rem;
-  }
-  /* Nosotros */
-  .nos2 img {
-    height: 12.5rem;
-  }
-  /* Footer */
-  footer section h1 {
-    font-size: smaller;
-  }
-  footer section h3 {
-    font-size: smaller;
-  }
-}
 @media (max-width: 768px) {
   header nav ul {
     flex-direction: column;
@@ -416,12 +395,15 @@ footer section div img {
     background-color: rgb(246, 166, 38);
     font-family: Arial, Helvetica, sans-serif;
     color: antiquewhite;
-    grid-row: 1/2;
+    grid-row: 1/3;
     grid-column: 1/3;
   }
+  .section1 h2 {
+    text-align: center;
+  }
   .section1 form {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    height: 50rem;
     justify-content: center;
     align-items: center;
   }
@@ -452,6 +434,38 @@ footer section div img {
     width: 100%;
     padding: 0;
     padding-top: 1.25rem;
+  }
+}
+@media (max-width: 426px) {
+  .grids {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(12, 12.5rem);
+  }
+  .grids section div img {
+    height: 9.375rem;
+    width: 100%;
+  }
+  .section1 {
+    grid-row: 1/5;
+    grid-column: 1/2;
+  }
+  /* Emprendimientos */
+  .empHeader h1 {
+    font-size: x-large;
+  }
+  .emp div img {
+    height: 15rem;
+  }
+  /* Nosotros */
+  .nos2 img {
+    height: 12.5rem;
+  }
+  /* Footer */
+  footer section h1 {
+    font-size: smaller;
+  }
+  footer section h3 {
+    font-size: smaller;
   }
 }
 
