--- a/scss/layout/_main-contactos.scss
+++ b/scss/layout/_main-contactos.scss
@@ -12,11 +12,8 @@
     width: 80%;
     height: 800px;
     padding: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex(column, space-evenly, none);
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: space-evenly;
     form{
         width: 100%;
         fieldset{
