--- a/scss/layout/_main-emp.scss
+++ b/scss/layout/_main-emp.scss
@@ -3,9 +3,7 @@
     background-size: cover;
     height: 300px;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(row,center, none);
     font-family: Arial, Helvetica, sans-serif;  
     font-size: large; 
 }
@@ -16,9 +14,7 @@
 
 .emp{
     color: $color-principal;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    @include flex(row,center, none);
     padding: 3.125rem;
     div{
         width: 500px;
@@ -26,6 +22,9 @@
             width: 80%;
             height: 25rem;
             border-radius: 2.5rem;
+            &:hover{
+                transform: scale(1.05)
+            }
         }
         h2{
             color: $bg-color-sec;
@@ -47,8 +46,35 @@
 .lista{
     width: 50%;
     height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flex(column,center, none)
 }
+
+.slide-top {
+	-webkit-animation: slide-top 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
+	        animation: slide-top 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
+}
+
+
+
+ @-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
+  
+  
