--- a/scss/layout/_main-nos.scss
+++ b/scss/layout/_main-nos.scss
@@ -11,11 +11,7 @@
     width: 50%;
 
     color: $color-principal;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flex(column,center, none);
     
 }
 
@@ -46,10 +42,7 @@
     background-color: rgb(246, 166, 38);
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flex(column,center, none);
     div{
         width: 80%;
         padding: 3.125rem;
