--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -26,17 +26,19 @@
         background-color: rgb(246, 166, 38);
         font-family: Arial, Helvetica, sans-serif;
         color: antiquewhite;
-        grid-row: 1/2;
+        grid-row: 1/3;
         grid-column: 1/3; 
+        h2{text-align: center;}
+        form{
+            flex-direction: column;
+            height: 50rem;
+            justify-content: center;
+            align-items: center;
+        }
+        
 
     }
 
-    .section1 form{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
 
 /* Emprendimientos */
 
