--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "./utilities/variables";
 @import "./utilities/mixins";
+@import "./utilities/maps";
 
 @import "./base/reset";
 
@@ -16,6 +17,6 @@
 @import "./components/card";
 
 @import "./layout/media/media1024";
-@import "./layout/media/media425";
 @import "./layout/media/media768";
+@import "./layout/media/media425";
 
