--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -13,6 +13,14 @@
         
     }
 
+    .sectionSec div img{
+        width: 80%;
+    }
+
+    .sectionSec div article{
+        width: 80%;
+    }
+
 /* Inmuebles */
     .grids {
         display: grid;
