--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -34,3 +34,81 @@
     }
 
 }
+
+.sectionSec {
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: map-get($tamaños , l );
+    h1{
+        text-align: center;
+        color: $bg-color-sec;
+        padding: 50px;
+        font-size: 32px;
+        text-shadow: rgb(179, 116, 22) 1px 0 10px;
+    }
+    
+    div{
+
+        display: flex;
+        align-items: center;
+        gap: 3.125rem;
+        width: 90%;
+        justify-content: center;
+        img{
+            height: 270px;
+            border-radius: 20px;
+            &:hover{
+                transform: scale(1.05);
+            }
+            
+        }
+        article{
+            color: $color-principal;
+            padding: 30px;
+            width: 500px;
+            border-top: 1px solid $bg-color-sec;
+            border-bottom: 1px solid $bg-color-sec;
+            h2{
+                margin-bottom: 30px;
+                text-align: center;
+                color: $bg-color-sec;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+            h4{
+                padding: 10px;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    
+                }
+        }
+    
+    }
+    
+    button{
+        background-color:$bg-principal;
+        height: map-get($tamaños , l);
+        width: 100px;
+        margin: 50px;
+        box-shadow: 0 0 5px $bg-color-sec, 0 0 25px $bg-color-sec;
+        &:hover{
+            transform: scale(1.1);
+            box-shadow: 0 0 5px $bg-color-sec,
+            0 0 1.5625rem $bg-color-sec,
+            0 0 3.125rem $bg-color-sec,
+            0 0 6.25rem $bg-color-sec;
+
+        }
+        a{
+            color: $bg-color-sec;
+            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
+}
