creación de menu hamburguesa

--- a/scss/layout/media/_media425.scss
+++ b/scss/layout/media/_media425.scss
@@ -1,4 +1,7 @@
 @media (max-width: 426px){
+    .imgLogo h2{
+        display: none;
+    }
     .grids {
         grid-template-columns: 1fr ;
         grid-template-rows: repeat(12, 12.5rem);
