--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,36 @@
 }
 
 header {
-  background-color: black;
+  width: 100%;
+}
+header nav {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: none;
+  background-color: black;
+  padding: 0rem 1.5rem;
+}
+header nav ul {
+  display: flex;
+  list-style: none;
+  gap: 2rem;
+}
+header nav ul li:hover {
+  transform: scale(1.1);
+}
+header nav ul li a {
+  color: antiquewhite;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 15px;
+  transition: color 1s;
+}
+header nav ul li a:hover {
+  color: rgb(246, 166, 38);
+}
+header nav #toggle, header nav label {
+  display: none;
 }
 header .imgLogo {
   display: flex;
@@ -22,27 +46,6 @@ header .imgLogo h2 {
 }
 header .imgLogo img {
   height: 5rem;
-}
-header nav ul {
-  display: flex;
-  padding: 10px;
-}
-header nav ul li {
-  list-style: none;
-}
-header nav ul li:hover {
-  transform: scale(1.1);
-}
-header nav ul li a {
-  color: antiquewhite;
-  padding: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  font-size: 15px;
-  transition: color 1s;
-}
-header nav ul li a:hover {
-  color: rgb(246, 166, 38);
 }
 
 .sectionPrincipal {
@@ -419,11 +422,23 @@ footer section div img {
 }
 
 @media (max-width: 1024px) {
-  header {
-    display: flex;
+  header nav .menu {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+  }
+  header nav ul {
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding: 0.5rem 0rem;
+  }
+  header nav label {
+    display: flex;
+    color: antiquewhite;
+    cursor: pointer;
+  }
+  header nav #toggle:checked ~ .menu {
+    height: 100%;
   }
   .sectionSec div {
     display: flex;
@@ -450,8 +465,27 @@ footer section div img {
   }
 }
 @media (max-width: 768px) {
+  header nav {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  header nav .menu {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+  }
   header nav ul {
     flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 0rem;
+  }
+  header nav label {
+    display: flex;
+    color: antiquewhite;
+    cursor: pointer;
+  }
+  header nav #toggle:checked ~ .menu {
+    height: 100%;
   }
   /* Index */
   .sectionPrincipal {
@@ -521,6 +555,9 @@ footer section div img {
   }
 }
 @media (max-width: 426px) {
+  .imgLogo h2 {
+    display: none;
+  }
   .grids {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(12, 12.5rem);
