--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,29 +1,22 @@
 header{
-    background-color: black;
-    @include flex(row, space-between, none);
-    .imgLogo{
-        display: flex;
-        align-items: center;
-        h2{
-            color: antiquewhite;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        img{
-            height: 5rem;
-        }
-    }
+    width: 100%;
     nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        background-color: black;
+        padding: 0rem 1.5rem;
         ul{
             display: flex;
-            padding: 10px;
+            list-style: none;
+            gap: 2rem;
             li{
-                list-style: none;
                 &:hover{
                     transform: scale(1.1);
                 }
                 a{
                     color: antiquewhite;
-                    padding: 20px;
                     font-family: Arial, Helvetica, sans-serif;
                     text-decoration: none;
                     font-size: 15px;
@@ -34,6 +27,24 @@ header{
                 }
             }
         }
+        #toggle, label{
+            display: none;
+        }
+        
     }
+
+
+.imgLogo{
+    display: flex;
+    align-items: center;
+    h2{
+        color: antiquewhite;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    img{
+        height: 5rem;
+    }
+    }
+
 }
 
