--- a/scss/layout/media/_media1024.scss
+++ b/scss/layout/media/_media1024.scss
@@ -1,9 +1,24 @@
 @media (max-width: 1024px){
-    header{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    header nav{
+        .menu{
+            width: 100%;
+            height: 0;
+            overflow: hidden;
+        }
+        ul{
+            flex-direction: column;
+            align-items: center;
+            padding: 0.5rem 0rem;
+        }
+        label{
+            display: flex;
+            color: antiquewhite;
+            cursor: pointer;
+        }
+        #toggle:checked ~ .menu{
+            height: 100%;
+
+        }
     }
 
     .sectionSec div{
