--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -1,6 +1,28 @@
 @media (max-width: 768px){
-    header nav ul{
-        flex-direction: column;
+    header{
+        nav{
+            flex-direction: row;
+            justify-content: space-between;
+            .menu{
+                width: 100%;
+                height: 0;
+                overflow: hidden;
+            }
+            ul{
+                flex-direction: column;
+                align-items: center;
+                padding: 0.5rem 0rem;
+            }
+            label{
+                display: flex;
+                color: antiquewhite;
+                cursor: pointer;
+            }
+            #toggle:checked ~ .menu{
+                height: 100%;
+    
+            }
+        }
     }
     /* Index */
     .sectionPrincipal{
