--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -58,12 +58,18 @@
         color: antiquewhite;
         grid-row: 1/3;
         grid-column: 1/3; 
-        h2{text-align: center;}
+        h2{
+            margin-left: 0rem;
+            text-align: center;
+        }
         form{
             flex-direction: column;
             height: 50rem;
             justify-content: center;
             align-items: center;
+            select{width: 70%;}
+            button{width: 70%;}
+            input{width: 70%;}
         }
         
 
